--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 <head>
 
-    <link rel="stylesheet" type="text/css" href="./styles/style.css" />
-    <link rel="shortcut icon" type="image/ico" href="images/favicon.ico" />
+    <link rel="stylesheet" type="text/css" href="./www/styles/style.css" />
+    <link rel="shortcut icon" type="image/ico" href="./www/images/favicon.ico" />
 
     <meta name="viewport" content="width=device-width, user-scalable=no">
     <title>Sudoku</title>
@@ -90,7 +90,7 @@
     <section id="facts-details">
         <h1>MORE boring facts</h1>
         <p>The name "Sudoku" stems from two Japanese words: "su", which means "number" and doku, which means "single" Translated, it mostly means "single numbers only"</p>
-        <p>Actually, Sudoku isn't a Japanese game it all. It's American invented. Howard Garns created it as Number Place in 1979 but died in 1989 before Japanese publisher Nikoli got a hold of it</p>
+        <p>Actually, Sudoku isn't a Japanese game at all. It's American invented. Howard Garns created it as Number Place in 1979 but died in 1989 before Japanese publisher Nikoli got a hold of it</p>
         <p> British Airways absolutely forbids its flight attendants from solving Sudoku puzzles during either takeoff or landing</p>
         <p>There are 6,670,903,752,021,072,936,960 possible combinations for completing a 9-by-9 Sudoku grid, but only 5,472,730,538 of them really count for different solutions. Needlessly to say, you need a handful of lifetimes to solve all of them</p>
         <p>When Sudoku became a world hit in 2005, it is estimated that it is the biggest phenomenon since the Rubik's Cube in the 1980</p>
@@ -105,12 +105,12 @@
     </div>
     <div class="simple-modal" data-bind="template: {name: 'inputModal', data: InputModalViewModel}, fade: InputModalViewModel.isVisible">      </div>
 
-    <script type="text/javascript" src="scripts/libs/jquery.min.js"></script>
-    <script type="text/javascript" src="scripts/libs/knockout.min.js"></script>
-    <script type="text/javascript" src="scripts/libs/koExternalTemplateEngine_all.min.js"></script>
-    <script type="text/javascript" src="scripts/libs/prefixfree.min.js"></script>
+    <script type="text/javascript" src="www/scripts/libs/jquery.min.js"></script>
+    <script type="text/javascript" src="www/scripts/libs/knockout.min.js"></script>
+    <script type="text/javascript" src="www/scripts/libs/koExternalTemplateEngine_all.min.js"></script>
+    <script type="text/javascript" src="www/scripts/libs/prefixfree.min.js"></script>
 
-    <script type="text/javascript" data-main="scripts/main" src="scripts/libs/require.min.js"></script>
+    <script type="text/javascript" data-main="www/scripts/main" src="www/scripts/libs/require.min.js"></script>
 </body>
 
 </html>
