--- a/index.html
+++ b/index.html
@@ -105,12 +105,7 @@
     </div>
     <div class="simple-modal" data-bind="template: {name: 'inputModal', data: InputModalViewModel}, fade: InputModalViewModel.isVisible">      </div>
 
-    <script type="text/javascript" src="www/scripts/libs/jquery.min.js"></script>
-    <script type="text/javascript" src="www/scripts/libs/knockout.min.js"></script>
-    <script type="text/javascript" src="www/scripts/libs/koExternalTemplateEngine_all.min.js"></script>
-    <script type="text/javascript" src="www/scripts/libs/prefixfree.min.js"></script>
-
-    <script type="text/javascript" data-main="www/scripts/main" src="www/scripts/libs/require.min.js"></script>
+    <script type="text/javascript" data-main="www/scripts/dist/main.min" src="www/scripts/dist/all.js"></script>
 </body>
 
 </html>
