Add extra paragraph
Self descriptive

--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
         <p>Remove number to empty square</p>
         <p>Start a new easy/medium/hard board</p>
         <p>Stucked? Solve the board</p>
+		<p>That's something different</p>
     </section>
     <section id="editor-mode-details">
         <h1>Editor mode</h1>
